WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124704
Fix WinCairo unreachable code warnings in SimpleLineLayout.cpp
https://bugs.webkit.org/show_bug.cgi?id=124704
Summary
Fix WinCairo unreachable code warnings in SimpleLineLayout.cpp
Laszlo Vidacs
Reported
2013-11-21 01:44:28 PST
Early return causes unreachable code warnings on specific platforms.
http://build.webkit.org/builders/WinCairo%20Release/builds/33430/steps/compile-webkit/logs/stdio
Attachments
Patch
(1.55 KB, patch)
2013-11-21 01:51 PST
,
Laszlo Vidacs
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Laszlo Vidacs
Comment 1
2013-11-21 01:51:37 PST
Created
attachment 217535
[details]
Patch
Antti Koivisto
Comment 2
2013-11-21 09:28:31 PST
Comment on
attachment 217535
[details]
Patch You should fix the warning settings instead.
Csaba Osztrogonác
Comment 3
2013-11-21 09:36:12 PST
(In reply to
comment #2
)
> (From update of
attachment 217535
[details]
) > You should fix the warning settings instead.
Do you really prefer ignoring unreachable code warnings instead of getting rid the unreachable codes from the source with proper guarding? I don't think if it is a good idea.
Antti Koivisto
Comment 4
2013-11-21 13:20:57 PST
One port using different warning settings than every other port just creates churn.
Csaba Osztrogonác
Comment 5
2013-11-21 13:30:02 PST
(In reply to
comment #4
)
> One port using different warning settings than every other port just creates churn.
It's not a about warning settings. There is an ifdef guard: "#if !PLATFORM(MAC) && !PLATFORM(GTK) && !PLATFORM(EFL)" with early return. After the #endif everything is unreachable code on all platform which is not Mac, GTK and EFL. Unreachable code is unreachable code and not warning setting.
Antti Koivisto
Comment 6
2013-11-21 14:34:17 PST
Comment on
attachment 217535
[details]
Patch Ok ok. The real solution here is to remove the whole ifdef and fix the 8bit run issues. That should really be done by people maintaining these platforms.
WebKit Commit Bot
Comment 7
2013-11-21 18:57:20 PST
Comment on
attachment 217535
[details]
Patch Clearing flags on attachment: 217535 Committed
r159666
: <
http://trac.webkit.org/changeset/159666
>
WebKit Commit Bot
Comment 8
2013-11-21 18:57:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug