Fix WinCairo unreachable code warnings in SimpleLineLayout.cpp https://bugs.webkit.org/show_bug.cgi?id=124704

Patch by Laszlo Vidacs <lac@inf.u-szeged.hu> on 2013-11-21
Reviewed by Antti Koivisto.

Fix unreachable code warnings using conditional directives.

* rendering/SimpleLineLayout.cpp:
(WebCore::SimpleLineLayout::canUseFor):

Canonical link: https://commits.webkit.org/142920@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159666 268f45cc-cd09-0410-ab3c-d52691b4dbfc